# auto-invitation-to-notion

./: README.md  pyproject.toml
auto-invitation-to-notion/: main.py
auto_invitation_to_notion/: main.py
permission_manager/: main.py
tests/: test_get_notion_info.py
