[tool.poetry]
name = "permission_manager"
version = "0.1.0"
description = ""
authors = ["Martin Hwang"]

[tool.poetry.dependencies]
python = "^3.8"
notion = "^0.0.28"
pytest = "^6.2.5"
schema = "^0.7.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
